--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,11 @@
 name: CartLoad
 main: net.teamio.server.utils.cartload.CartLoad
 version: 1.3
+
+commands:
+   countminecarts:
+      description: Count all Minecart Entities on the Server
+      usage: /countminecarts
+      permission: cartload.use
+      permisison-message: Must have permission (cartload.use) to count all minecarts!
+      default: op
