--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.teamio.server.utils.cartload</groupId>
+	<groupId>net.teamio</groupId>
 	<artifactId>CartLoad</artifactId>
 	<version>dev-SNAPSHOT</version>
 	<repositories>
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.2.3-R0.2-SNAPSHOT</version>
+			<version>LATEST</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -38,6 +38,6 @@
 	</scm>
 	<ciManagement>
 		<system>jenkins</system>
-		<url>http://build.lincomlinux.org/jenkins/job/CartLoad</url>
+		<url>http://ci.alta189.com/job/CartLoad</url>
 	</ciManagement>
 </project>
